# minecraft

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  standalone_autoclicker_test.cpp  test_autoclicker_debug.cpp  test_injection.sh  verify_autoclicker.sh
config/: config.json
config/modules/: autoclicker.json
include/: client.h  hook_manager.h  hooks.h  logger.h  memory_manager.h  module_manager.h  process_manager.h  timer.h
include/hooks/: hooks_1_8_9.h
include/modules/: autoclicker.h  example_modules.h
src/: client.cpp  hook_manager.cpp  hooks.cpp  injector.cpp  logger.cpp  memory_manager.cpp  module_manager.cpp  process_manager.cpp
src/hooks/: hooks_1_8_9.cpp
src/modules/: autoclicker.cpp  speed.cpp
